{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 33,
  "lineage": "dd098f9f-32a8-404b-b5f5-06454cdbb563",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/zones/us-central1-a/instanceGroups/web-servers-ig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2026-01-25T16:56:22.198-08:00",
            "enable_cdn": false,
            "external_managed_migration_testing_percentage": 0,
            "fingerprint": "-F_mkCAVAyg=",
            "generated_id": 1161995850169910617,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/healthChecks/http-basic-check"
            ],
            "id": "projects/cks-training-445101/global/backendServices/backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "backend-service",
            "port_name": "http",
            "project": "cks-training-445101",
            "protocol": "HTTP",
            "security_policy": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/securityPolicies/se-demo-waf-policy",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/backendServices/backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.web_servers",
            "google_compute_security_policy.waf-policy"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default-allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-01-25T16:55:42.096-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/cks-training-445101/global/firewalls/default-allow-http-lb",
            "log_config": [],
            "name": "default-allow-http-lb",
            "network": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/networks/default",
            "params": [],
            "priority": 1000,
            "project": "cks-training-445101",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/firewalls/default-allow-http-lb",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "http-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "external_managed_backend_bucket_migration_testing_percentage": 0,
            "forwarding_rule_id": 1000849128195556047,
            "id": "projects/cks-training-445101/global/forwardingRules/forwarding-rule",
            "ip_address": "34.110.229.118",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "forwarding-rule",
            "network_tier": "PREMIUM",
            "port_range": "80-80",
            "project": "cks-training-445101",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/forwardingRules/forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/targetHttpProxies/http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.web_servers",
            "google_compute_security_policy.waf-policy",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "force_attach": false,
                "guest_os_features": [
                  "UEFI_COMPATIBLE",
                  "VIRTIO_SCSI_MULTIQUEUE",
                  "GVNIC"
                ],
                "initialize_params": [
                  {
                    "architecture": "X86_64",
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20260114",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/zones/us-central1-a/disks/vulnerable-web-app"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2026-01-25T16:55:43.378-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/cks-training-445101/zones/us-central1-a/instances/vulnerable-web-app",
            "instance_id": "6140027598100170080",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "H7Q0Jt4OlH8=",
            "metadata_startup_script": "    #!/bin/bash\n    apt-get update\n    apt-get install -y python3-pip\n    pip3 install Flask\n\n    # Create a simple, intentionally vulnerable Flask app\n    cat \u003e /app.py \u003c\u003cAPP_EOF\nfrom flask import Flask, request\n\napp = Flask(__name__)\n\n@app.route('/')\ndef home():\n    # VULNERABILITY: Reflecting user input directly without sanitization\n    user_input = request.args.get('query', '')\n    return f\"\u003ch1\u003eWelcome to the WA [...]
            "name": "vulnerable-web-app",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.223.227.68",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/networks/default",
                "network_ip": "10.128.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/regions/us-central1/subnetworks/default",
                "subnetwork_project": "cks-training-445101"
              }
            ],
            "project": "cks-training-445101",
            "scheduling": [
              {
                "automatic_restart": true,
                "availability_domain": 0,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/zones/us-central1-a/instances/vulnerable-web-app",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_rsa"
              }
            ]
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "waf-policy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "fingerprint": "gG7JF7gimkk=",
            "id": "projects/cks-training-445101/global/securityPolicies/se-demo-waf-policy",
            "label_fingerprint": "vezUS-42LLM=",
            "labels": null,
            "name": "se-demo-waf-policy",
            "project": "cks-training-445101",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Default allow",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Block SQL Injection attempts",
                "header_action": [],
                "match": [
                  {
                    "config": [],
                    "expr": [
                      {
                        "expression": "evaluatePreconfiguredExpr('sqli-stable')"
                      }
                    ],
                    "expr_options": [],
                    "versioned_expr": ""
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 1000,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/securityPolicies/se-demo-waf-policy",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-25T16:57:56.651-08:00",
            "fingerprint": "P1--bdIQNnk=",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/cks-training-445101/global/targetHttpProxies/http-proxy",
            "name": "http-proxy",
            "project": "cks-training-445101",
            "proxy_bind": false,
            "proxy_id": 5451374294206186235,
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/targetHttpProxies/http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/urlMaps/url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.web_servers",
            "google_compute_security_policy.waf-policy",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-01-25T16:57:45.426-08:00",
            "default_custom_error_response_policy": [],
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/backendServices/backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "11sJr1JGcHc=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/cks-training-445101/global/urlMaps/url-map",
            "map_id": 266806803190973158,
            "name": "url-map",
            "path_matcher": [],
            "project": "cks-training-445101",
            "self_link": "https://www.googleapis.com/compute/v1/projects/cks-training-445101/global/urlMaps/url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.http_health_check",
            "google_compute_instance.web_server",
            "google_compute_instance_group.web_servers",
            "google_compute_security_policy.waf-policy"
          ]
        }
      ]
    }
  ]
}